--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "heroku-postbuild": "cd server && nodemon index.js ",
+    "heroku-postbuild": "cd server && nodemon index.js && npm run build ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
